# smol_buf

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
benches/: bench.rs
src/: buf16.rs  buf24.rs  intern.rs  lib.rs  str16.rs  str24.rs
tests/: test_str16.rs  test_str24.rs  tidy.rs
