[package]
name = "smol_buf"
version = "0.1.0"
description = "small-string optimized string / buffer type with O(1) clone"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Swatinem/smol_buf"
authors = ["Arpad Borsos <swatinem@swatinem.de>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.136", optional = true, default_features = false }
arbitrary = { version = "1.1.0", optional = true }

[dev-dependencies]
proptest = "1.0.0"
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }

[features]
default = ["std"]
std = ["serde?/std"]
intern = ["std"]
