[package]
name = "smol_buf"
version = "0.1.2"
description = "small-string optimized string / buffer type with O(1) clone"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Swatinem/smol_buf"
authors = ["Arpad Borsos <swatinem@swatinem.de>"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[dependencies]
## Adds support to create random strings using `arbitrary`.
arbitrary = { version = "1.1.0", optional = true }
document-features = { version = "0.2.10", optional = true }
## Adds serialization and deserialization support via `serde`.
serde = { version = "1.0.136", optional = true, default_features = false }

[dev-dependencies]
proptest = "1.0.0"
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }

[features]
default = ["std"]
std = ["serde?/std"]
# serde = ["dep:serde"]
## Enables a simple interner for strings.
intern = ["std"]
